frontend/test/should_pass/dpo_003.grg
rule r {
	dpo pattern {
		x: Node -:Edge-> x;
	}
	replace {
	}
}

