frontend/test/should_fail/basic_019.grg
rule r(-x:Edge->) {
  x:Node;
  modify { }
}
